add background images to theme and image preloader

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
+    "bundle-loader": "^0.5.4",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
     "elm": "^0.17.0",
@@ -24,7 +25,11 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.17.0",
+    "json-loader": "^0.5.4",
+    "lodash.assign": "^3.2.0",
+    "manifest-loader": "0.0.1",
     "postcss-loader": "^0.9.1",
+    "recursive-readdir": "^1.2.1",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
