--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "bundle-loader": "^0.5.4",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
-    "elm": "^0.18.0",
-    "elm-hot-loader": "^0.5.4",
-    "elm-webpack-loader": "^4.1.1",
+    "elm": "^0.19.0",
+    "elm-hot-webpack-loader": "^1.0.2",
+    "elm-webpack-loader": "^5.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.17.0",
